Blackbody node on world with multiple importance sample and preview crash #38526

Closed
opened 2014-02-06 20:47:46 +01:00 by Greg · 8 comments

System Information
Windows 7 x64, amd 6870 for display and gtx580 3go for rendering, amd drivers: 2013.1206.1603.28764, nvidia drivers: 331.82

Blender Version
Broken: 2.69.0 r60995
Worked: no blackbody in previous version

Short description of error
Blender crashes when i have a blackbody node on the world with multiple importance sample enabled and then open preview in world option.

Exact steps for others to reproduce the error
Open mareck-blackbodynode-world-preview.blend, go to world panel, open preview, it crashes.mareck-blackbodynode-world-preview.blend

**System Information** Windows 7 x64, amd 6870 for display and gtx580 3go for rendering, amd drivers: 2013.1206.1603.28764, nvidia drivers: 331.82 **Blender Version** Broken: 2.69.0 r60995 Worked: no blackbody in previous version **Short description of error** Blender crashes when i have a blackbody node on the world with multiple importance sample enabled and then open preview in world option. **Exact steps for others to reproduce the error** Open mareck-blackbodynode-world-preview.blend, go to world panel, open preview, it crashes.[mareck-blackbodynode-world-preview.blend](https://archive.blender.org/developer/F76259/mareck-blackbodynode-world-preview.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Greg self-assigned this 2014-02-06 20:47:46 +01:00
Author

Added subscriber: @mareck

Added subscriber: @mareck

This issue was referenced by blender/blender-addons-contrib@0f8ad228c3

This issue was referenced by blender/blender-addons-contrib@0f8ad228c38a26f467c3ea5f2932f04247986f9f

This issue was referenced by 0f8ad228c3

This issue was referenced by 0f8ad228c38a26f467c3ea5f2932f04247986f9f

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0f8ad228c3.

Closed by commit 0f8ad228c3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38526
No description provided.