Fix T38526: crash using blackbody node on background with multiple importance sampling.